data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1655.wast
;; 6. **Test 6: Br_table with Conditional Unreachable Target**    - A `br_table` where one conditional path leads to `unreachable`, intended to test boundary conditions.    - **Reasoning:** Tests if conditional paths leading to `unreachable` trap accurately.    - **Constraint:** Evaluates how conditional execution paths are managed when reaching `unreachable`.

(assert_invalid
  (module (func $test_br_table_with_unreachable (result i32)
    (block (result i32)
      (br_table 0 1 (i32.const 0) (unreachable) (i64.const 0))
    )
  ))
  "type mismatch"
)